--- a/assignments/assignment3/website/css/Style.css
+++ b/assignments/assignment3/website/css/Style.css
@@ -387,10 +387,19 @@ h3 {
 }
 
 .text {
-    width: 50vw;
+    width: 50%;
     margin: auto;
 }
 
+
+.textF {
+    width: 60%;
+    margin: auto;
+}
+
+.textF H1{
+ font-size: 25pt;
+}
 
 .textSC {
     width: 70vw;
@@ -405,7 +414,11 @@ h3 {
     padding-bottom: 5vh;
 }
 
-
+.textF img {
+    width: 100%;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
 
 
 /* --- tekst screen ---  */
@@ -490,13 +503,18 @@ border: 1 solid black;}
 .contact-image{
     text-align: center;
 }
-.contact-image img{
-    border-radius: 6rem;
+.contact-image img{ 
     width: 9vw;
     margin-top: -6%;
 }
+
+.contact-image h1{
+    font-size: ;
+}
+
 .contact-form form{
     padding: 14%;
+    padding-top: 3%;
 }
 .contact-form form .row{
     margin-bottom: -7%;
@@ -534,8 +552,8 @@ border: 1 solid black;}
         justify-content: center;
     align-items: center;
     height: 100vh;
-    margin-top: -10vh;
-    margin-bottom: -5vh;
+    margin-top: 5h;
+    margin-bottom: 5vh;
 }
 
 .video {
@@ -713,6 +731,10 @@ footer.footer .move-up span:hover {
         border-top: 2px solid rgba(0, 0, 0, 0.150);
         border-bottom: 2px solid rgba(0, 0, 0, 0.150);
         
+        
+    }
+      .contact-image h1{
+        font-size:30pt ;
     }
 }
 
@@ -745,22 +767,26 @@ footer.footer .move-up span:hover {
     }
 
     .containertut{
-        height: 13vh;
+        height: Auto;
         width: 70%;
         margin: auto;
         
-        margin-bottom: 23vh;
+    
         border-top: 2px solid rgba(0, 0, 0, 0.150);
     
     }
     
     .containertut2{
-        height:37vh;
+        height:auto;
         width: 70%;
     
-        margin-bottom: 10vh;
+
         border-top: 2px solid rgba(0, 0, 0, 0.150);
         border-bottom: 2px solid rgba(0, 0, 0, 0.150);
+    }
+
+    .btntut{
+        margin-bottom: 5vh;
     }
 
     .tut-post img{
@@ -768,6 +794,10 @@ footer.footer .move-up span:hover {
         float: left;
         margin-bottom: 5vh;
         border-radius: 10px;
+    }
+
+    .contact-image h1{
+        font-size:30pt ;
     }
 
 }
@@ -779,62 +809,35 @@ footer.footer .move-up span:hover {
 /* --- Mobiel ---  */
 
 @media only screen and (max-width: 520px) {
-    main .tut {
-        height: 70vh;
-    }
-
-
-
-    footer.footer .container>div {
-        padding: 1rem .9rem !important;
-    }
-
-    footer .rights {
-        padding: 0 1.4rem;
-        text-align: center;
-    }
-
-    nav .toggle-collapse {
-        width: 80% !important;
-    }
-
-
-    .tut-post img{
-        height: 20vh;
-        float: left;
-        margin-bottom: 3vh;
-        border-radius: 10px;
-    }
-
-
-    .containertut{
-        height: 24vh;
-        width: 70%;
-        margin: auto;
+   
+    .flex-container > div{
+       
         
-        margin-bottom: 26vh;
-        border-top: 2px solid rgba(0, 0, 0, 0.150);
-    
-    }
-    
-    .containertut2{
-        height:50vh;
-        width: 70%;
-    
-        margin-bottom: 14vh;
-        border-top: 2px solid rgba(0, 0, 0, 0.150);
-        border-bottom: 2px solid rgba(0, 0, 0, 0.150);
     }
 
+    .text H1{
+       font-size: 35pt;
+    }
+    
+    .contact-image h1{
+        font-size:25pt ;
+    }
 
+    .fontsizebtn{
+        font-size: 10pt;
+    }
 
     .containerVIDEO {
         display: flex;
             justify-content: center;
         align-items: center;
         height: 100vh;
-        margin-top: -31vh;
-        margin-bottom: -20vh;
+        margin-top: -40vh;
+        margin-bottom: -15vh;
     }
-
+    .textSC h1{
+        font-size: 30pt;
+    }
 }
+
+
